--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation("com.googlecode.json-simple:json-simple:1.1.1")
+    compile group: 'org.apache.mina', name: 'mina-core', version: '2.1.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
